Changelog
=========


2.4.5 (unreleased)
------------------

- Nothing changed yet.


2.4.4 (2012-12-18)
------------------

- Downlaod view: Encode filename to avoid unicodeencodeerros and
  use set_attachment_content_disposition for correct download with IE.
  Issue #1783 UnicodeDecodeError in der neuen Download View.
  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1783/view
  [phgross]


2.4.3 (2012-12-11)
------------------

- Added locking checks in checkout manager.
  [phgross]

- Implements document specifig forwidget.namedfile modes,
  which doesn't display a file-download link.
  [phgross]


2.4.2 (2012-12-07)
------------------

- Made sure documents can't be checked out if another user holds a lock.
  Issue #1722 Durch "Metadaten bearbeiten" ausgestelltes Lock sollte "Auschecken und Bearbeiten" verhindern
  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1772/
  [lgraf]

- Overview: Made download copy link conditionally.
  [phgross]


2.4.1 (2012-11-28)
------------------

- Let EditCheckerView works for all document types, also for mails.
  [phgross]


2.4 (2012-11-28)
----------------

- Implements editchecker wrapper view, used in extendend tooltip.
  [phgross]

- Fixed fallback tab for redirecting in doucment_editing view.
  [phgross]

- Implements document overview rebuild (file display,
  download links and confirmation).
  [phgross]

- Dropped Plone 4.1 compatibility. Only 4.2 and up are supported.
  [lgraf]

- Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]


2.3.2 (2012-09-25)
------------------

- Updated vdexvocabs.
  [tschanzt]


2.3.1 (2012-09-12)
------------------

- Document overview: Changed file representation (using icons as download links).
  [phgross]

- Adjust french translations.
  [phgross]

- Activate temporary disabled browse functionality in the contenttree widget.
  [phgross]


2.3 (2012-06-25)
----------------

- Added some more MIME type definitions
  [lgraf]